Refactor HTML and CSS structure for improved readability and organization . add the Html structure for the Skills

--- a/index.html
+++ b/index.html
@@ -12,11 +12,8 @@
 </head>
 <body>
 
-<!-- NAVBAR -->
+<!-- ---------------------------------NAVBAR -------------------------------------------------------->
 <nav class="navbar">
-  <!-- <div class="nav-left">
-    <a href="#" class="home-icon">🏠</a>
-  </div> -->
     <div class="nav-left">
     <a href="#home" ></a>
     <span class="name-rotate" id="nameRotate">Akash Mondal</span>
@@ -24,7 +21,7 @@
 
   <ul class="nav-links" id="navLinks">
     <li><a href="#home">Home</a></li>
-    <li><a href="#">Skills</a></li>
+    <li><a href="#skills">Skills</a></li>
     <li><a href="#">Projects</a></li>
     <li><a href="#">Education</a></li>
     <li><a href="#contact-wrapper">Contact</a></li>
@@ -40,7 +37,7 @@
 <div class="menu-overlay" id="menuOverlay"></div>
 
 
-<!-- HERO SECTION -->
+<!----------------------------------------- HERO SECTION / ABOUT SECTION ------------------------------->
 <section class="hero" id="home">
   <div class="hero-left">
     <h1>
@@ -66,13 +63,45 @@
   </div>
 </section>
 
+<!--------------------------------------------Sills section------------------------------------------>
+
+<section class="skills-section" id="skills">
+  <div class="skills-wrapper">
+    <div class="skills-inner">
+
+      <div class="skill-card html">
+        <div class="img">HTML</div>
+      </div>
+
+      <div class="skill-card css">
+        <div class="img">CSS</div>
+      </div>
+
+      <div class="skill-card js">
+        <div class="img">JavaScript</div>
+      </div>
+
+      <div class="skill-card java">
+        <div class="img">Java</div>
+      </div>
+
+      <div class="skill-card cpp">
+        <div class="img">C++</div>
+      </div>
+
+    </div>
+  </div>
+</section>
 
 
-<!--contact section-->
+
+
+<!--------------------------------------------contact section------------------------------------------>
+
 <section class="contact-wrapper" id="contact-wrapper">
 
     <!-- TOP CENTER HEADING -->
-    <h2 class="section-title center-title">Get In <span class="accent">Touch</span></h2>
+    <h2 class=" center-title">Get In <span class="accent">Touch</span></h2>
         <p class="contact-intro">
           I'm currently looking for new opportunities and exciting projects to work on. 
           Whether you have a question, want to collaborate, or just want to say hi, 
