--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 <!--------------------------------------------Sills section------------------------------------------>
 
 <section class="skills-section" id="skills">
+ <h2 class=" skill-title">My<span class="skill">  Skills</span></h2>
   <div class="skills-wrapper">
     <div class="skills-inner">
 
