Add placeholder for Projects section in HTML structure

--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
 
 
 
+<!--------------------------------------------Projects Section ------------------------------------------>
+
+
+
 
 <!--------------------------------------------contact section------------------------------------------>
 
