--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <ul class="nav-links" id="navLinks">
     <li><a href="#home">Home</a></li>
     <li><a href="#skills">Skills</a></li>
-    <li><a href="#">Projects</a></li>
+    <li><a href="#projects">Projects</a></li>
     <li><a href="#">Education</a></li>
     <li><a href="#contact-wrapper">Contact</a></li>
   </ul>
