Add Education section with details and styling for improved presentation

--- a/index.html
+++ b/index.html
@@ -282,6 +282,31 @@
       
       </div>
     </section>
+
+<!---------------------------------------------- EDUCATION SECTION-->
+
+<section class="Educationsection" id="Education">
+        <h2 class="edu-heading">My <span>Education</span></h2>
+
+        <div class="education-box">
+          <h2>Bachelor of Technology in Computer Science & Engineering</h2>
+          <h4>Seacom Skills University</h4>
+
+          <p class="year-place">
+            2023 - 2027
+            <span class="dot"></span>
+            Kendradangal, Bolpur, Birbhum, West Bengal
+          </p>
+
+          <p class="desc">
+            Currently pursuing a comprehensive Computer Science degree with a
+            focus on software development, algorithms, and modern web
+            technologies.
+          </p>
+        </div>
+      </section>
+
+
 <!--------------------------------------------contact section------------------------------------------>
 
 <section class="contact-wrapper" id="contact-wrapper">
