--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <li><a href="#home">Home</a></li>
     <li><a href="#skills">Skills</a></li>
     <li><a href="#projects">Projects</a></li>
-    <li><a href="#">Education</a></li>
+    <li><a href="#Education">Education</a></li>
     <li><a href="#contact-wrapper">Contact</a></li>
   </ul>
 
