--- a/index.html
+++ b/index.html
@@ -52,9 +52,13 @@
      and Engineering from Seacom Skills University.
     </p>
 
-     <a href="https://github.com/AkashMondal27?tab=overview&from=2026-01-01&to=2026-01-21" download class="btn">
-       GITHUB
-     </a>
+          <a href="https://drive.google.com/file/d/1GWd49W3hxhvKiAzRxtwxrmcOTeaZfXCT/view" download class="btn">
+            View CV
+          </a>
+               <a href="https://drive.google.com/uc?export=download&id=1GWd49W3hxhvKiAzRxtwxrmcOTeaZfXCT
+      " download class="btn">
+            download CV
+          </a>
 
   </div>
 
