Add footer section and update CV download links; adjust navbar styles for responsiveness

--- a/index.html
+++ b/index.html
@@ -52,13 +52,10 @@
      and Engineering from Seacom Skills University.
     </p>
 
-          <a href="https://drive.google.com/file/d/1GWd49W3hxhvKiAzRxtwxrmcOTeaZfXCT/view" download class="btn">
+          <a href="https://drive.google.com/file/d/1GWd49W3hxhvKiAzRxtwxrmcOTeaZfXCT/view" download class="btn">  <i class="fa-solid fa-file-arrow-down"></i> 
             View CV
           </a>
-               <a href="https://drive.google.com/uc?export=download&id=1GWd49W3hxhvKiAzRxtwxrmcOTeaZfXCT
-      " download class="btn">
-            download CV
-          </a>
+              
 
   </div>
 
@@ -409,6 +406,14 @@
     </div>
 
 </section>
+
+<!---------------------------------------FOOTER SECTION---------------------->
+<footer class="footer">
+  <p>
+    © 2026 Akash Mondal · Built with HTML, CSS & JavaScript
+  </p>
+</footer>
+
 
 
 <script src="script.js"></script>
