--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                   </svg>
                 </a>
                 
-                <a href="akashmondal27.github.io/Password-Generator/" target="_blank" aria-label="Open Calculator demo" class="link right">
+                <a href="https://akashmondal27.github.io/Password-Generator/" target="_blank" aria-label="Open Calculator demo" class="link right">
                   <!-- Link / demo SVG (external) -->
                   <svg class="icon" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
                     <path d="M14 3v2h3.59L10 12.59 11.41 14 19 6.41V10h2V3z"></path>
@@ -284,7 +284,7 @@
       </div>
     </section>
 
-<!---------------------------------------------- EDUCATION SECTION-->
+<!---------------------------------------------- EDUCATION SECTION-------------------------------------------->
 
 <section class="Educationsection" id="Education">
         <h2 class="edu-heading">My <span>Education</span></h2>
