Remove unnecessary blank lines and adjust comment formatting in Projects section

--- a/index.html
+++ b/index.html
@@ -95,8 +95,6 @@
   </div>
 </section>
 
-
-
 <!--------------------------------------------Projects Section ------------------------------------------>
 <section class="projects-section" id="projects">
       <h1 class="title main-title">My <span class="accent">Projects</span></h1>
@@ -107,7 +105,7 @@
         </button>
       </div>
       <div class="cards-wrap" id="cardsWrap">
-        <!---- PASSWORD GENERATOR ------------------>
+        <!---- PASSWORD GENERATOR ----------->
         <article class="card filled">
           <div
             class="card-media"
@@ -177,7 +175,7 @@
             </p>
           </div>
         </article>
-  <!-------------------- Tic Tac Toe----------------------  -->
+  <!-------------------- Tic Tac Toe-------------  -->
         <article class="card filled">
           <div
             class="card-media"
