Enhance navbar responsiveness and improve hamburger menu animation

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <li><a href="#Education">Education</a></li>
     <li><a href="#contact-wrapper">Contact</a></li>
   </ul>
-
+     <!-- 3 lines in responsive mode -->
   <div class="hamburger" id="hamburger">
     <span></span>
     <span></span>
@@ -44,10 +44,9 @@
       Akash <span>Mondal</span>
     </h1>
 
-    <h2>Full Stack Developer in progresss</h2> 
+    <h2>Full Stack Developer <br>in progresss</h2> 
 
     <p>
-     Computer Science Undergraduate .
      Currently pursuing B.Tech in Computer Science 
      and Engineering from Seacom Skills University.
     </p>
