Update education section and enhance hero section responsiveness

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 
           <p class="desc">
             Currently pursuing a comprehensive Computer Science degree with a
-            focus on software development, algorithms, and modern web
+            focus on web development, algorithms, and modern web
             technologies.
           </p>
         </div>
