--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
           <div class="card-media" style="background-image: url('#');"></div>
           <div class="card-content">
             <div class="card-label card-label5">
-              <span class="label-text">Coming soon</span>
+              <span class="label-text"> &nbsp; &nbsp; Coming soon &nbsp; &nbsp;</span>
               <div class="card-links">
                 <a href="#" class="link left" aria-hidden="true">
                   <svg class="icon" viewBox="0 0 24 24" fill="currentColor"><path d="M12 .5C5.65.5.5 5.65.5 12c0 5.09 3.29 9.41 7.86 10.94.57.11.78-.25.78-.55 0-.27-.01-1.17-.02-2.12-3.2.7-3.88-1.54-3.88-1.54-.53-1.34-1.3-1.7-1.3-1.7-1.06-.72.08-.71.08-.71 1.17.08 1.79 1.2 1.79 1.2 1.04 1.78 2.73 1.27 3.4.97.11-.76.41-1.27.75-1.56-2.56-.29-5.26-1.28-5.26-5.7 0-1.26.45-2.29 1.19-3.1-.12-.29-.52-1.46.11-3.04 0 0 .97-.31 3.17 1.18a11 11 0 0 1 2.89-.39c.98 0 1.97.13 2.89.39 2.19-1.5 3.16-1.18 3.16-1.18.64 1.58.24 2.75.12 3.04.74.81 1.19 1.84 1.19 3.1 0 4.43-2.71 5.41-5.29 5.69.42.36.79 1.08.79 2.18 0 1.57-.01 2.84-.01 3.23 0 .3.2.67.79.56C20.71 21.41 24 17.09 24 12 24 5.65 18.35.5 12 .5z"/></svg>
@@ -262,7 +262,7 @@
           <div class="card-media" style="background-image: url('#');"></div>
           <div class="card-content">
             <div class="card-label card-label6">
-              <span class="label-text">Coming soon</span>
+              <span class="label-text"> &nbsp; &nbsp; Coming soon &nbsp; &nbsp;   </span>
               <div class="card-links">
                 <a href="#" class="link left" aria-hidden="true">
                   <svg class="icon" viewBox="0 0 24 24" fill="currentColor"><path d="M12 .5C5.65.5.5 5.65.5 12c0 5.09 3.29 9.41 7.86 10.94.57.11.78-.25.78-.55 0-.27-.01-1.17-.02-2.12-3.2.7-3.88-1.54-3.88-1.54-.53-1.34-1.3-1.7-1.3-1.7-1.06-.72.08-.71.08-.71 1.17.08 1.79 1.2 1.79 1.2 1.04 1.78 2.73 1.27 3.4.97.11-.76.41-1.27.75-1.56-2.56-.29-5.26-1.28-5.26-5.7 0-1.26.45-2.29 1.19-3.1-.12-.29-.52-1.46.11-3.04 0 0 .97-.31 3.17 1.18a11 11 0 0 1 2.89-.39c.98 0 1.97.13 2.89.39 2.19-1.5 3.16-1.18 3.16-1.18.64 1.58.24 2.75.12 3.04.74.81 1.19 1.84 1.19 3.1 0 4.43-2.71 5.41-5.29 5.69.42.36.79 1.08.79 2.18 0 1.57-.01 2.84-.01 3.23 0 .3.2.67.79.56C20.71 21.41 24 17.09 24 12 24 5.65 18.35.5 12 .5z"/></svg>
