Enhance education section with university link and style improvements

--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
     <h2>Full Stack Developer <br>in progresss</h2> 
 
     <p>
-     Currently pursuing B.Tech in Computer Science 
-     and Engineering from Seacom Skills University.
+     Currently pursuing B.Tech in <br/>Computer Science 
+     and Engineering  <br/> from <a href= "https://www.seacomskillsuniversity.ac.in/" 
+     target="_blank" rel="noopener noreferrer">
+      Seacom Skills University.</a>
     </p>
 
           <a href="https://drive.google.com/file/d/1GWd49W3hxhvKiAzRxtwxrmcOTeaZfXCT/view" download class="btn">  <i class="fa-solid fa-file-arrow-down"></i> 
