just make some changes in project section .

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           ></div>
           <div class="card-content">
             <div class="card-label card-label1">
-              <span class="label-text">Password <br> Generator</span>
+              <span class="label-text">Password  Generator</span>
 
               <div class="card-links">
                 <a href="https://github.com/AkashMondal27/Password-Generator" target="_blank" aria-label="Open Calculator on GitHub" class="link left">
@@ -157,7 +157,7 @@
           ></div>
           <div class="card-content">
             <div class="card-label card-label4">
-              <span class="label-text">Rock Paper <br> Scissors</span>
+              <span class="label-text">Rock Paper Scissors</span>
 
               <div class="card-links">
                 <a href="https://github.com/AkashMondal27/Rock-Paper-Scissors" target="_blank" aria-label="Open Rock Paper Scissors on GitHub" class="link left">
