Update social media buttons with unique IDs and adjust icon sizes for better visibility

--- a/index.html
+++ b/index.html
@@ -368,10 +368,10 @@
                     <h3>My Social Media</h3>
 
                     <div class="social-grid">
-                        <a class="social-btn" href="https://github.com/AkashMondal27" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i><span>GitHub</span></a>
-                        <a class="social-btn" href="https://www.linkedin.com/in/akashmondal27/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i><span>LinkedIn</span></a>
-                        <a class="social-btn" href="https://x.com/AkashMonda27" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-x-twitter"></i><span>X</span></a>
-                        <a class="social-btn" href="https://www.instagram.com/akash__diaries/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i><span>Instagram</span></a>
+                        <a class="social-btn" id="ocial-btn1" href="https://github.com/AkashMondal27" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i><span>GitHub</span></a>
+                        <a class="social-btn" id="ocial-btn2" href="https://www.linkedin.com/in/akashmondal27/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i><span>LinkedIn</span></a>
+                        <a class="social-btn" id="ocial-btn3" href="https://x.com/AkashMonda27" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-x-twitter"></i><span>X</span></a>
+                        <a class="social-btn" id="ocial-btn4" href="https://www.instagram.com/akash__diaries/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i><span>Instagram</span></a>
                     </div>
 
                 </div>
