adding README.md file

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       Akash <span>Mondal</span>
     </h1>
 
-    <h2>Full Stack Developer <br>in progresss</h2> 
+    <h2>Full Stack Developer <br>in progress</h2> 
 
     <p>
      Currently pursuing B.Tech in <br/>Computer Science 
@@ -79,23 +79,23 @@
     <div class="skills-inner">
 
       <div class="skill-card html">
-        <div class="img">HTML</div>
+        <div class="img"> C++</div>
       </div>
 
       <div class="skill-card css">
-        <div class="img">CSS</div>
+        <div class="img">JAVA</div>
       </div>
 
       <div class="skill-card js">
-        <div class="img">JavaScript</div>
+        <div class="img">Java <br>Script</div>
       </div>
 
       <div class="skill-card java">
-        <div class="img">Java</div>
+        <div class="img">CSS</div>
       </div>
 
       <div class="skill-card cpp">
-        <div class="img">C++</div>
+        <div class="img">HTML</div>
       </div>
 
     </div>
